assets/css/style.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import
  "minima/skins/classic",
  "minima/initialize";

.wrapper {
  max-width: calc(650px - (30px))
}

.trigger {
  background: white;
}

.footer-col {
  text-align: left;
}

.site-logo {
  height: 30px;
}

.post-header {
  margin-bottom: 30px;
  margin-top: 70px;
}

.site-header {
  border-top: none;
  padding-bottom: 5px;
  border-bottom: 3px solid #999999;
}

.site-footer {
  border-top: 3px solid #999999;
}

#ref-section {
  margin-bottom: 80px;
}

.post-list {
  margin-top: calc(30% - 100px);
  margin-bottom: calc(30% - 100px);
}

.post-list li {
  border: solid 2.5px #999999;
  border-radius: 0px;
  padding: 30px 20px;
}

.post-list li a {
  margin-block-start: 0px;
}

.post-list li a:hover {
  text-decoration: none;
  color: $brand-color;
}

.post-description {
  text-decoration: none;
  color: black;
}

.post-list li:hover {
  border-color: black;
}

.post-list li a h2 {
  margin-bottom: 3px;
  color: black;
}

.post-list li:hover {
  transform: translateY(-3.5px);
}

.post-image {
  margin-bottom: 10px;
}

.post-image,
.post img {
  width: 100%;
  margin-top: 25px;
  margin-bottom: 15px;
}

.idiom {
  float: right;
  color: $brand-color;
}

.contact-list {
  float: left;
}

.post-content h2 {
  margin-top: 6px;
}

.post-content {
  margin-bottom: 90px;
}

table {
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

td {
  font-size: 12px
}

figcaption {
  margin-top: 12px;
  text-align: center;
  font-style: italic;
  font-size: 0.95em;
}

.post-content h2, .post-content h3 {
  opacity: 0;
  margin: 0;
  padding: 0;
}

.toc {
  position: absolute;
  top: 0;
  left: calc(10% - 280px);
  height: 100%;
  width: 260px;
  font-size: 0.85em;
  overflow: hidden;
}

.toc ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

.toc ul::before {
  content: '';
  position: absolute;
  left: 30%;
  top: 0;
  bottom: 0;
  width: 2.5px;
  background: #cdcdcd;
}

.toc li {
  position: relative;
  padding-left: calc(30% + 20px);
}

.toc a {
  text-decoration: none;
  color: #cdcdcd;
  display: block;
  padding: 4px 0;
}

.toc a.active {
  color: #000;
  font-weight: bold;
}

.toc li::before {
  content: '—';
  position: absolute;
  left: 69px;
  background: none;
  width: auto;
  height: auto;
  border-radius: 0;
  transform: none;
  top: 4px;
  color: #cdcdcd;
}

.toc li.active::before {
  color: #000;
}

.post-wrapper {
  position: relative;
}

@media (max-width: 1024px) {
  
  .toc { 
    display: none; 
  }
  
  .post-content h2, .post-content h3 { 
    opacity: 0; 
    display:none; 
  }

}

@media (max-width: 624px) {

  .site-nav {
    background: none;
    border: 2.5px solid #999999;
    border-radius: 0px;
  }

}

